--- a/argo/example-app/deployments/deployment.yaml
+++ b/argo/example-app/deployments/deployment.yaml
@@ -1,27 +1,27 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: example-config
-data:
-  config.json: |
-    {
-      "environment" : "dev"
-    }
+# apiVersion: v1
+# kind: ConfigMap
+# metadata:
+#   name: example-config
+# data:
+#   config.json: |
+#     {
+#       "environment" : "dev"
+#     }
 
----
+# ---
 
-apiVersion: v1
-kind: Secret
-metadata:
-  name: mysecret
-type: Opaque
-stringData:
-  secret.json: |-
-    {
-      "api_key" : "somesecretgoeshere"
-    }
-    
----
+# apiVersion: v1
+# kind: Secret
+# metadata:
+#   name: mysecret
+# type: Opaque
+# stringData:
+#   secret.json: |-
+#     {
+#       "api_key" : "somesecretgoeshere"
+#     }
+
+# ---
 
 apiVersion: apps/v1
 kind: Deployment
